@@ -43,7 +43,7 @@ function prototyper.finish()
     -- Generate new lua-globals acting as a static cache for some important data
     loader.run()
 
-    -- Save tutorial subfactory to global for better performance
+    -- Verify tutorial subfactory so we don't have to later on
     -- This can't be done on_load since game is not available at that stage
     local imported_tutorial_factory, error = data_util.porter.get_subfactories(TUTORIAL_EXPORT_STRING)
     global.tutorial_subfactory_validity = (not error and Factory.get(imported_tutorial_factory, "Subfactory", 1).valid)
