@@ -353,6 +353,7 @@ warning_module_not_compatible=Your preferred __1__ is not compatible with this m
 warning_no_other_machine_choice=No other machine can craft this recipe
 warning_no_prioritizing_single_product=Recipes with a single relevant product can’t be prioritized
 hint_tutorial=If you are new to Factory Planner, consider taking a look the the tutorial ⟶
+hint_byproducts_removed=Disabling the matrix solver removes all byproduct recipes
 
 # Units
 prefix_kilo=k
